# mlops_mnist

./: .coverage  .gitignore  Makefile  README.md  data.dvc  predict.dockerfile  pyproject.toml  requirements.txt  setup.py  trained_model_from_docker.pt  trainer.dockerfile  wandb.dockerfile
.dvc/: config
.github/workflows/: cml.yaml  codecheck.yml  docker.yml  python-app.yml  tests.yml
config/: sweep.yaml  training_conf.yaml
data/processed/corruptedmnist/: test_targets.pt  train_targets.pt
docs/: mkdocs.yaml
docs/source/: index.md
info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mlops_mnist/: __init__.py  lightning_model.py  predict_model.py  report.html  train_cml.py  train_model.py
mlops_mnist/data/: get_dataset.py  make_dataset.py
mlops_mnist/models/: model.py
mlops_mnist/visualizations/: visualize.py
models/: trained_model.pt
src/: predict_model.py  train_model.py
src/models/: model.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py  wip_test_training.py
